--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
 /* Estilos para VistaLogin */
+/*Estilo para el fondo */
 body {
   font-family: Arial, sans-serif;
   display: flex;
@@ -6,20 +7,71 @@ body {
   align-items: center;
   height: 100vh;
   margin: 0;
-  background-color: #f4f4f4;
+  background-color: #8ec6ae;
 }
 
+/*El contenedor del login*/
 .login-container {
-  background-color: white;
-  padding: 2rem;
-  width: 400px;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
-  gap: 1rem;
-  text-align: center;
+  align-items: center;
+  justify-content: center;
+  height: 65vh; /*Alto del cuadro del ogin */
+  width: 55vw; /*Ancho del cuadro del login */
+  background-color: #ffffff;
+  padding: 5rem;
 }
+
+
+.login-container h2 {
+  font-size: 2.5rem;
+  margin-bottom: 2rem;
+  color: #333;
+}
+
+
+/*Inputs y selesct*/
+.input-container,
+.select-container {
+  margin-bottom: 1.5rem;
+  width: 100%;
+  max-width: 600px;
+}
+
+label {
+  display: block;
+  font-size: 1.2rem;
+  margin-bottom: 0.5rem;
+  font-weight: bold;
+  color: #444;
+}
+
+input,
+select {
+  width: 100%;
+  padding: 1rem;
+  font-size: 1.1rem;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  box-sizing: border-box;
+}
+
+.login-button {
+  padding: 1rem 2rem;
+  font-size: 1.2rem;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.login-button:hover {
+  background-color: #0056b3;
+}
+
+
 
 h2 {
   margin-bottom: 1rem;
